--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,8 +3,11 @@
 
 %div.side-bar
   %div.side-bar__user
-    %p keisuke
-    %i.fa.fa-cog
+    %div.side-bar__user__name
+      %p keisuke
+    %div.side-bar__user__icons
+      %i.fa.fa-pencil-square-o
+      %i.fa.fa-cog
   %div.side-bar__now-group
     %ul
       %li 現在のグループ
