group一覧の構造をmodifier使って変更した

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,15 +8,15 @@
     %div.side-bar__user__icons
       %i.fa.fa-pencil-square-o
       %i.fa.fa-cog
-  %div.side-bar__now-group
-    %ul
-      %li 現在のグループ
+  %div.side-bar__groups
+    %div..side-bar__groups--now
+      %p 現在のグループ
       %p 最新のメッセージ
-  %div.side-bar__other-groups
-    %ul
-      %li その他①グループ
+    %div..side-bar__groups--other
+      %p その他①グループ
       %p まだメッセージはありません
-      %li その他②グループ
+    %div..side-bar__groups--other
+      %p その他②グループ
       %p まだメッセージはありません
 
 %div.main-content
