groupの各要素にクラスをつけた

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -9,15 +9,15 @@
       %i.fa.fa-pencil-square-o
       %i.fa.fa-cog
   %div.side-bar__groups
-    %div..side-bar__groups--now
-      %p 現在のグループ
-      %p 最新のメッセージ
-    %div..side-bar__groups--other
-      %p その他①グループ
-      %p まだメッセージはありません
-    %div..side-bar__groups--other
-      %p その他②グループ
-      %p まだメッセージはありません
+    %div.side-bar__groups__individual
+      %p.side-bar__groups__individual--name 現在のグループ
+      %p.side-bar__groups__individual--message 最新のメッセージ
+    %div.side-bar__groups__individual
+      %p.side-bar__groups__individual--name その他①グループ
+      %p.side-bar__groups__individual--message まだメッセージはありません
+    %div.side-bar__groups__individual
+      %p.side-bar__groups__individual--name その他②グループ
+      %p.side-bar__groups__individual--message まだメッセージはありません
 
 %div.main-content
   %div.main-content__header
