各groupのnameとmessageの間にmarginをつけた

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -34,6 +34,7 @@ header {
         margin-bottom: 40px;
         &--name {
           font-size: 15px;
+          margin-bottom: 5px;
         }
         &--message {
           font-size: 11px;
