.main-content__headerの高さと背景色の指定

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -46,5 +46,10 @@ header {
 .main-content {
   float: right;
   width: calc( 100vw - 380px );
+  height: 100vh;
   padding: 0 40px;
+  &__header {
+    height: 88px;
+    background-color: #ffffff;
+  }
 }
