--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -14,7 +14,7 @@ header {
   color: #ffffff;
   background-color: #2f3e51;
     &__user {
-      height: 88px;
+      height: 100px;
       font-size: 16px;
       background-color: #253141;
       padding: 0 20px;
@@ -45,11 +45,21 @@ header {
 
 .main-content {
   float: right;
-  width: calc( 100vw - 380px );
+  width: calc( 100vw - 300px );
   height: 100vh;
-  padding: 0 40px;
   &__header {
-    height: 88px;
+    height: 65px;
     background-color: #ffffff;
+    border-bottom: solid 0.5px #eeeeee;
+    padding: 35px 40px 0;
+    & h2 {
+      height: 20px;
+      margin-bottom: 15px;
+      color: #333333;
+    }
+    & p {
+      font-size: 12px;
+      color: #999999;
+    }
   }
 }
