main-content__header__buttonのhtml作成

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -21,8 +21,11 @@
 
 %div.main-content
   %div.main-content__header
-    %h2 sampleグループ
-    %p member: keisuke
+    %div.main-content__header__info
+      %h2 sampleグループ
+      %p member: keisuke
+    %div.main-content__header__button
+      Edit
   %div.main-content__chat-space
     %h4 keisuke
     %p hello
