main-content__header__buttonのデザインと中央寄せを実現した

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -25,7 +25,7 @@
       %h2 sampleグループ
       %p member: keisuke
     %div.main-content__header__button
-      Edit
+      %p Edit
   %div.main-content__chat-space
     %h4 keisuke
     %p hello
