--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -48,18 +48,35 @@ header {
   width: calc( 100vw - 300px );
   height: 100vh;
   &__header {
-    height: 65px;
+    height: 100px;
     background-color: #ffffff;
     border-bottom: solid 0.5px #eeeeee;
-    padding: 35px 40px 0;
-    & h2 {
+    padding: 0 40px;
+    &__info {
+      float: left;
+      & h2 {
       height: 20px;
-      margin-bottom: 15px;
+      margin: 35px 0 15px;
       color: #333333;
+      }
+      & p {
+        font-size: 12px;
+        color: #999999;
+      }
     }
-    & p {
-      font-size: 12px;
-      color: #999999;
+    &__button {
+      display: table;
+      float: right;
+      border: 1px solid #38aef0;
+      height: 40px;
+      padding: 0 20px;
+      margin-top: 28px;
+      color: #38aef0;
+      & p {
+        display: table-cell;
+        vertical-align: middle;
+      }
     }
+
   }
 }
