--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,8 +1,10 @@
 // Place all the styles related to the messages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+$blue: #38aef0;
+
 header {
-  background-color: #38aef0;
+  background-color: $blue;
   color: #ffffff;
   text-align: center;
 }
@@ -67,7 +69,7 @@ header {
     &__button {
       display: table;
       float: right;
-      border: 1px solid #38aef0;
+      border: 1px solid $blue;
       height: 40px;
       padding: 0 20px;
       margin-top: 28px;
