--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -26,7 +26,7 @@
       %p member: keisuke
     %div.main-content__header__button
       %p Edit
-  %div.main-content__chat-space
+  %div.main-content__chat-area
     %h4 keisuke
     %p hello
   %div.main-content__message-box
