メインの部分個別のメッセージ用のdivを作成した

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -27,7 +27,8 @@
     %div.main-content__header__button
       %p Edit
   %div.main-content__chat-area
-    %h4 keisuke
-    %p hello
+    %div.main-content__chat-area__message
+      %h3 keisuke
+      %p hello
   %div.main-content__message-box
     %p メッセージ送信
