--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -34,11 +34,11 @@ header {
       padding: 0 20px;
       &__individual {
         margin-bottom: 40px;
-        &--name {
+        & h3 {
           font-size: 15px;
           margin-bottom: 5px;
         }
-        &--message {
+        & p {
           font-size: 11px;
         }
       }
