--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -30,5 +30,5 @@
     %div.main-content__chat-area__message
       %h3 keisuke
       %p hello
-  %div.main-content__message-box
+  %div.main-content__send-box
     %p メッセージ送信
