main-content各messageの要素をinfoとtextにぶんかつした

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -28,7 +28,10 @@
       %p Edit
   %div.main-content__chat-area
     %div.main-content__chat-area__message
-      %h3 keisuke
-      %p hello
+      %div.main-content__chat-area__message__info
+        %h3 keisuke
+        %p 2017/10/16
+      %div.main-content__chat-area__message__text
+        %p hello
   %div.main-content__send-box
     %p メッセージ送信
