メッセージ各要素の並びを調整し、回り込みを阻止した

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -84,6 +84,19 @@ header {
     height: calc( 100vh - 170px );
     padding: 0 40px;
     background-color: #eeeeee;
+    &__message {
+      &__info {
+        & h3 {
+          float: left;
+        }
+        & p {
+          float: left;
+        }
+      }
+      &__text {
+        clear: both;
+      }
+    }
   }
   &__send-box {
     height: 50px;
