--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -28,10 +28,28 @@
       %p Edit
   %div.main-content__chat-area
     %div.main-content__chat-area__message
-      %div.main-content__chat-area__message__info
+      %div.main-content__chat-area__message__info.clearfix
         %h3 keisuke
         %p 2017/10/16
       %div.main-content__chat-area__message__text
         %p hello
+    %div.main-content__chat-area__message
+      %div.main-content__chat-area__message__info.clearfix
+        %h3 keisuke
+        %p 2017/10/16
+      %div.main-content__chat-area__message__text
+        %p hello2
+    %div.main-content__chat-area__message
+      %div.main-content__chat-area__message__info.clearfix
+        %h3 keisuke
+        %p 2017/10/16
+      %div.main-content__chat-area__message__text
+        %p hello3
+    %div.main-content__chat-area__message
+      %div.main-content__chat-area__message__info.clearfix
+        %h3 keisuke
+        %p 2017/10/16
+      %div.main-content__chat-area__message__text
+        %p hello4
   %div.main-content__send-box
     %p メッセージ送信
