日付の位置を下げた

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -98,6 +98,7 @@ header {
           float: left;
           margin-left: 10px;
           color: #999999;
+          margin-top: 4px;
         }
       }
       &__text {
