--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -45,11 +45,9 @@
         %p 2017/10/16
       %div.main-content__chat-area__message__text
         %p hello3
-    %div.main-content__chat-area__message
-      %div.main-content__chat-area__message__info.clearfix
-        %h3 keisuke
-        %p 2017/10/16
-      %div.main-content__chat-area__message__text
-        %p hello4
   %div.main-content__send-box
-    %p メッセージ送信
+    %div.main-content__send-box__text-area
+      %p メッセージを送信する
+    %div.main-content__send-box__button
+      %p Send
+
