--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -82,7 +82,7 @@ header {
     }
   }
   &__chat-area {
-    height: calc( 100vh - 216px );
+    height: calc( 100vh - 236px );
     padding: 46px 40px 0 40px;
     background-color: #eeeeee;
     &__message {
@@ -114,7 +114,24 @@ header {
   }
   &__send-box {
     height: 50px;
-    padding: 10px 0 10px;
+    padding: 20px 40px;
+    background-color: #aaaaaa;
+    &__text-area {
+      float: left;
+      background-color: #fff;
+      height: 100%;
+      margin-left: 10px;
+      width: calc( 100% - 110px )
+    }
+    &__button {
+      float: left;
+      width: 100px;
+      height: 50px;
+      background-color: $blue;
+      & p {
+        color: #ffffff;
+      }
+    }
   }
 }
 
