画像アイコンの追加

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -48,6 +48,7 @@
   %div.main-content__send-box
     %div.main-content__send-box__text-area
       %p メッセージを送信する
+      %i.fa.fa-picture-o
     %div.main-content__send-box__button
       %p Send
 
