--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -106,7 +106,7 @@ header {
       &__text {
         // clear: both;
         & p {
-        margin-top: 10px;
+          margin-top: 10px;
           font-size: 14px;
         }
       }
@@ -117,18 +117,33 @@ header {
     padding: 20px 40px;
     background-color: #aaaaaa;
     &__text-area {
+      // display: table;
       float: left;
       background-color: #fff;
       height: 100%;
       margin-left: 10px;
-      width: calc( 100% - 110px )
+      width: calc( 100% - 135px );
+      & p {
+        line-height: 50px;
+        float: left;
+        font-size: 16px;
+        color: #434a54;
+      }
+      & i {
+        line-height: 50px;
+        float: right;
+        margin-right: 10px;
+      }
     }
     &__button {
       float: left;
       width: 100px;
       height: 50px;
       background-color: $blue;
+      margin-left: 15px;
       & p {
+        line-height: 50px;
+        text-align: center;
         color: #ffffff;
       }
     }
