_colors_variable.scssのインポート

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "./reset";
 @import "./variable";
+@import "./colors_variable";
 @import "./messages";
 @import "./users";
 @import "font-awesome";
