hamlのdivタグの省略

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,54 +1,54 @@
 %header
   %p チャットグループが作成されました
 
-%div.side-bar
-  %div.side-bar__user
-    %div.side-bar__user__name
+.side-bar
+  .side-bar__user
+    .side-bar__user__name
       %p keisuke
-    %div.side-bar__user__icons
+    .side-bar__user__icons
       %i.fa.fa-pencil-square-o
       %i.fa.fa-cog
-  %div.side-bar__groups
-    %div.side-bar__groups__individual
+  .side-bar__groups
+    .side-bar__groups__individual
       %h3 現在のグループ
       %p 最新のメッセージ
-    %div.side-bar__groups__individual
+    .side-bar__groups__individual
       %h3 その他①グループ
       %p まだメッセージはありません
-    %div.side-bar__groups__individual
+    .side-bar__groups__individual
       %h3 その他②グループ
       %p まだメッセージはありません
 
-%div.main-content
-  %div.main-content__header
-    %div.main-content__header__info
+.main-content
+  .main-content__header
+    .main-content__header__info
       %h2 sampleグループ
       %p member: keisuke
-    %div.main-content__header__button
+    .main-content__header__button
       %p Edit
-  %div.main-content__chat-area
-    %div.main-content__chat-area__message
-      %div.main-content__chat-area__message__info.clearfix
+  .main-content__chat-area
+    .main-content__chat-area__message
+      .main-content__chat-area__message__info.clearfix
         %h3 keisuke
         %p 2017/10/16
-      %div.main-content__chat-area__message__text
+      .main-content__chat-area__message__text
         %p hello
-    %div.main-content__chat-area__message
-      %div.main-content__chat-area__message__info.clearfix
+    .main-content__chat-area__message
+      .main-content__chat-area__message__info.clearfix
         %h3 keisuke
         %p 2017/10/16
-      %div.main-content__chat-area__message__text
+      .main-content__chat-area__message__text
         %p hello2
-    %div.main-content__chat-area__message
-      %div.main-content__chat-area__message__info.clearfix
+    .main-content__chat-area__message
+      .main-content__chat-area__message__info.clearfix
         %h3 keisuke
         %p 2017/10/16
-      %div.main-content__chat-area__message__text
+      .main-content__chat-area__message__text
         %p hello3
-  %div.main-content__send-box
-    %div.main-content__send-box__text-area
+  .main-content__send-box
+    .main-content__send-box__text-area
       %p メッセージを送信する
       %i.fa.fa-picture-o
-    %div.main-content__send-box__button
+    .main-content__send-box__button
       %p Send
 
