編集画面へのリンクを作成・色変更用のクラスを付加

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -28,6 +28,9 @@ header {
       &__icons {
         float: right;
         padding-top: 32px;
+        &--white {
+          color: $white;
+        }
       }
     }
     &__groups {
