グループ編集リンク用のアイコンにも色指定のクラスを不可

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,7 +6,7 @@
     .side-bar__user__name
       %p keisuke
     .side-bar__user__icons
-      %i.fa.fa-pencil-square-o
+      %i.fa.fa-pencil-square-o.side-bar__user__icons--white
       = link_to edit_user_path(current_user), class:'side-bar__user__icons--white' do
         %i.fa.fa-cog
   .side-bar__groups
