notice/alertの場合の色をそれぞれ決めた

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,5 +1,10 @@
 .flash {
-  background-color: $blue;
   color: $white;
   text-align: center;
+  &__notice {
+    background-color: $blue;
+  }
+  &__alert {
+    background-color: $matte-red;
+  }
 }
