flash_messagesのscssファイル名の変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,5 @@
 @import "./colors_variable";
 @import "./messages";
 @import "./users";
-@import "./common";
+@import "./flash_messages";
 @import "font-awesome";
