新規グループ作成のリンクを作成

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,7 +3,8 @@
     .side-bar__user__name
       %p keisuke
     .side-bar__user__icons
-      %i.fa.fa-pencil-square-o.side-bar__user__icons--white
+      = link_to new_chat_group_path, class:'side-bar__user__icons--white' do
+        %i.fa.fa-pencil-square-o
       = link_to edit_user_path(current_user), class:'side-bar__user__icons--white' do
         %i.fa.fa-cog
   .side-bar__groups
