chat_groups.scssのインポート

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,6 @@
 @import "./colors_variable";
 @import "./messages";
 @import "./users";
+@import "./chat_groups";
 @import "./flash_messages";
 @import "font-awesome";
