--- a/app/assets/stylesheets/_colors_variable.scss
+++ b/app/assets/stylesheets/_colors_variable.scss
@@ -6,8 +6,8 @@ $silver-gray: #999999;
 $gray: #dddddd;
 $background-gray: #aaaaaa;
 $safe-color: #333333;
-$blue: #38aef0;
 $dark-blue: #2f3e51;
 $deep-blue: #253141;
 $sky-blue: #38aef0;
 $matte-red: #d65f4c;
+$danger-red: #f05050;
