--- a/app/assets/stylesheets/flash_messages.scss
+++ b/app/assets/stylesheets/flash_messages.scss
@@ -2,7 +2,7 @@
   color: $white;
   text-align: center;
   &__notice {
-    background-color: $blue;
+    background-color: $sky-blue;
   }
   &__alert {
     background-color: $matte-red;
