--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -23,7 +23,7 @@
     .main-content__header__info
       %h2 sampleグループ
       %p member: keisuke
-    .main-content__header__button
+    = link_to new_chat_group_path, class:'main-content__header__button' do
       %p Edit
   .main-content__chat-area
     .main-content__chat-area__message
