表示の誤記を修正

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -11,7 +11,7 @@
     - @chat_groups.each do |group|
       .side-bar__groups__individual
         %h3<
-          group.name
+          = group.name
         %p まだメッセージはありません
 
 .main-content
