--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -8,11 +8,12 @@
       = link_to edit_user_path(current_user), class:'side-bar__user__icons--white' do
         %i.fa.fa-cog
   .side-bar__groups
-    - @chat_groups.each do |group|
+    - @chat_groups.each do |chat_group|
       .side-bar__groups__individual
         %h3
-          = group.name
-        %p まだメッセージはありません
+          = chat_group.name
+        %p
+          まだメッセージがありません
 
 .main-content
   .main-content__header
