--- a/app/views/chat_groups/new.html.haml
+++ b/app/views/chat_groups/new.html.haml
@@ -4,7 +4,7 @@
     - if @chat_group.errors.any?
       #error_explanation.chat-group-form__errors
         %h2
-          #{ @chat_group.errors.count }件のエラーが発生しました。
+          #{ @chat_group.errors_count }件のエラーが発生しました。
           %ul
           - @chat_group.errors.full_messages.each do |msg|
             %li
