メッセージ一覧への画像の表示とクラスの付加

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -105,6 +105,10 @@
           font-size: 14px;
         }
       }
+      &__image {
+        margin-top: 5px;
+        max-width: 300px;
+      }
     }
   }
   &__send-box {
