--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -31,6 +31,8 @@
       padding: 0 20px;
       &__individual {
         margin-bottom: 40px;
+        text-decoration: none;
+        color: $white;
         & h3 {
           font-size: 15px;
           margin-bottom: 5px;
