--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -19,7 +19,7 @@
           %h3
             = msg.user.name
           %p
-            = msg.created_at.strftime('%Y年%m月%d日')
+            = msg.created_at.strftime('%Y年%m月%d日 %H:%M')
         .main-content__chat-area__message__text
           %p
             = msg.body if msg.body
