decoratorの#recent_messageの名称を変更

--- a/app/views/layouts/parts/_sidebar.html.haml
+++ b/app/views/layouts/parts/_sidebar.html.haml
@@ -15,4 +15,4 @@
           %h3
             = chat_group.name
           %p
-            = chat_group.recent_message
+            = chat_group.latest_message
