decorator実装に合わせてifを削除

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -22,8 +22,8 @@
             = msg.created_at_time
         .main-content__chat-area__message__text
           %p
-            = msg.body if msg.body
-          = image_tag msg.image, class:'main-content__chat-area__message__image' if msg.image
+            = msg.body
+          = image_tag msg.image, class:'main-content__chat-area__message__image'
   .main-content__send-box
     = form_for [@chat_group, @message] do |f|
       = f.text_area :body, placeholder: 'メッセージを入力してください', class: 'main-content__send-box__text-area'
