メッセージ送信用boxの右側からの絶対位置を指定

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -126,6 +126,7 @@
     position: fixed;
     width: calc( 100vw - 380px );
     bottom: 0;
+    right: 0;
     height: 50px;
     padding: 20px 40px;
     background-color: $background-gray;
