--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -3,10 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .side-bar {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;
   width: 300px;
   height: 100vh;
   float: left;
