--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -25,10 +25,12 @@
             = msg.body
           = image_tag msg.image, class:'main-content__chat-area__message__image'
   .main-content__send-box
-    = form_for [@chat_group, @message], id: 'send_message' do |f|
+    = form_for [@chat_group, @message] do |f|
       = f.text_area :body, placeholder: 'メッセージを入力してください', class: 'main-content__send-box__text-area message-text'
       .main-content__send-box__image
         = f.label :image, class:'main-content__send-box__image' do
           %i.fa.fa-picture-o
         = f.file_field :image, class: 'message-img', style: 'display: none;'
       = f.submit 'Send', class: 'main-content__send-box__button'
+
+
