--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -26,11 +26,11 @@
           = image_tag msg.image, class:'main-content__chat-area__message__image'
   .main-content__send-box
     = form_for [@chat_group, @message] do |f|
-      = f.text_area :body, placeholder: 'メッセージを入力してください', class: 'main-content__send-box__text-area message-text'
+      = f.text_area :body, placeholder: 'メッセージを入力してください', id: 'message-text', class: 'main-content__send-box__text-area'
       .main-content__send-box__image
         = f.label :image, class:'main-content__send-box__image' do
           %i.fa.fa-picture-o
-        = f.file_field :image, class: 'message-img', style: 'display: none;'
+        = f.file_field :image, id: 'message-img', style: 'display: none;'
       = f.submit 'Send', class: 'main-content__send-box__button', data: {disable_with: '送信中'}
 
 
