--- a/app/views/chat_groups/_form.html.haml
+++ b/app/views/chat_groups/_form.html.haml
@@ -7,31 +7,32 @@
         %li
           = msg
 
-.chat-group-form__field.clearfix
-  .chat-group-form__field--left
-    = f.label :name, 'グループ名', class: 'chat-group-form__label'
-  .chat-group-form__field--right
-    = f.text_field :name, placeholder: 'グループ名を入力してください', id: 'chat_group_name', class: 'chat-group-form__input'
-.chat-group-form__field.clearfix
-  / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
-  .chat-group-form__field--left
-    %label.chat-group-form__label
-      チャットメンバーを追加
-  .chat-group-form__field--right
-    .chat-group-form__search.clearfix
-      %input{class: 'chat-group-form__input', id: 'user-search-field', placeholder: '追加したいユーザー名を入力してください', type: 'text'}
-    #user-search-result
+.chat-group-form__field
+  .chat-group-form__field__group-name
+    .chat-group-form__field--left
+      = f.label :name, 'グループ名', class: 'chat-group-form__label'
+    .chat-group-form__field--right
+      = f.text_field :name, placeholder: 'グループ名を入力してください', id: 'chat_group_name', class: 'chat-group-form__input'
+  .chat-group-form__field__search-field
+    / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
+    .chat-group-form__field--left
+      %label.chat-group-form__label
+        チャットメンバーを追加
+    .chat-group-form__field--right
+      .chat-group-form__search.clearfix
+        %input{class: 'chat-group-form__input', id: 'user-search-field', placeholder: '追加したいユーザー名を入力してください', type: 'text'}
+      #user-search-result
 
-  .chat-group-form__field--left
-    = f.label :user_ids, 'チャットメンバー', class: 'chat-group-form__label'
+  .chat-group-form__field__member
+    .chat-group-form__field--left
+      = f.label :user_ids, 'チャットメンバー', class: 'chat-group-form__label'
+    .chat-group-form__field--right
+      #chat-group-users
+        .chat-group-user.clearfix#chat-group-user-22
+          %p{class: 'chat-group-user__name'}
+            seo_kyohei
 
-  .chat-group-form__field--right
-    #chat-group-users
-      .chat-group-user.clearfix#chat-group-user-22
-        %p{class: 'chat-group-user__name'}
-          seo_kyohei
-
-  .chat-group-form__field--right
+  .chat-group-form__field__submit
     =f.submit '作成する', class: 'chat-group-form__action-btn'
 
 -#  .chat-group-form__field--right
