ボタンの位置を修正

--- a/app/assets/stylesheets/chat_groups.scss
+++ b/app/assets/stylesheets/chat_groups.scss
@@ -59,7 +59,7 @@
         margin-bottom: 10px;
       }
       &__submit {
-        margin: 0 auto;
+        text-align: right;
       }
     }
     &__label {
