--- a/app/assets/stylesheets/chat_groups.scss
+++ b/app/assets/stylesheets/chat_groups.scss
@@ -78,7 +78,7 @@
   }
 
   .chat-group-user {
-    padding: 0 15px;
+    padding-left: 30px;
     line-height: 50px;
     font-size: 14px;
     border-bottom: 1px solid $gray;
@@ -86,6 +86,17 @@
       content: "";
       clear: both;
       display: block;
+    }
+
+    &__add-user-btn {
+      background-color: $sky-blue;
+      border: none;
+      color: white;
+      float: right;
+      line-height: 50px;
+      width: 100px;
+      cursor: pointer;
+      font-size: 1em;
     }
 
     .chat-group-user__name {
@@ -114,4 +125,10 @@
     background-color: $sky-blue;
     border: 0;
   }
+}
+
+#user-search-result {
+  border: 2px solid $gray;
+  border-top: none;
+  margin-bottom: 20px;
 }
