--- a/app/views/chat_groups/_form.html.haml
+++ b/app/views/chat_groups/_form.html.haml
@@ -28,7 +28,7 @@
       = f.label :user_ids, 'チャットメンバー', class: 'chat-group-form__label'
     .chat-group-form__field--right
       #chat-group-users
-        .chat-group-user.clearfix
+        .chat-group-user
           %p{class: 'chat-group-user__name'}
             seo_kyohei
 
